added new formulas

--- a/phy_171_formula_sheet.tex
+++ b/phy_171_formula_sheet.tex
@@ -124,11 +124,11 @@
   & \( c = 3.00 \times 10^8 \mbox{m}/\mbox{s}  \)\\
   & \( N_A = 6.02 \times 10^{23} \) \\
   & \(k= 1.38 \times 10^{-23} \mbox{J}/\mbox{K}\) \\
-  & \(g=9.80 \mbox{m}/\mbox{2}^2\) \\
+  & \( g = 9.80 \mbox{m}/\mbox{s}^2\)\\
 \end{tabular}
 
 %\vspace{.25in}
-
+\( x=\frac{-b \pm \sqrt{b^2-4ac}}{2a} \)
 
 \subsection{Kinematics}
 \begin{tabular}{@{}ll@{}}
@@ -161,15 +161,14 @@ freefall \(a=-g\)  \hfill \qquad\\
 
 
 
-
+\subsection{Projectile motion}
 \begin{tabular}{c}
-projectile motion \hfill \qquad\\
 horizontal motion \(a_x=0\) \hfill \qquad \\
 \(x=x_0+v_xt\) \\
 \( v_x=v_{0x}=v_x \) \\
 vertical motion \hfill \qquad\\
 \( y = y_0 +v_0 t -\frac{1}{2} g t^2\) \\
-\( v_y-v_{0y}-gt \) \\
+\( v_y=v_{0y}-gt \) \\
 \( v_y^2 =v_{0y}^2 - 2g(y-y_0) \) \\
 \\
 \( s=\sqrt{x^2+y^2}\) \\
@@ -190,12 +189,14 @@ Maximum height and range \hfill \qquad\\
 \( a =\frac{F}{m} \) \\
 \( F=ma \) \\
 \( w=mg \) \\
-friction \hfill \qquad\\
+\end{tabular}
+\subsection{friction}
+\begin{tabular}{c}
 \( f_s \le \mu_s N \) \\
 \( f_k = \mu_k N \) \\
-% Elasticity \hfill \qquad \\
-% \( F=k \Delta L \) \\
-% \( \Delta L =\frac{F}{k} \) \\
+%Elasticity \hfill \qquad \\
+%\( F=k \Delta L \) \\
+%\( \Delta L =\frac{F}{k} \) \\
 \end{tabular}
 
 
@@ -213,7 +214,7 @@ friction \hfill \qquad\\
 \( 2 \pi \mbox{ rad}= 360^\circ = 1\mbox{ revolution} \) \\
 \( \omega = \frac{\Delta \theta}{\Delta t} \) \\
 \( v = r \omega \mbox{ or } \omega = \frac{v}{r} \) \\
-Centripetal Accelleration \hfill \qquad\\
+Centripetal Acceleration \hfill \qquad\\
 \( a_c = \frac{v^2}{r} \ ; \ a_c=r \omega^2 \) \\
 Centripetal Force \hfill \qquad \\
 \( F_c=m a_c\) \\
@@ -233,6 +234,8 @@ Centripetal Force \hfill \qquad \\
 \(W = Fd \cos \theta\) \\
 \( KE = \frac{1}{2} m v^2 \) \\
 \( \Delta PE_g = m g h \) \\
+\( W = \Delta KE + \Delta PE \) \\
+\( \mbox{PE}_{\mbox{spring}}= \frac{1}{2} k x^2 \) \\
 \( P =\frac{W}{t} \) \\
 \end{tabular}
 
@@ -243,11 +246,40 @@ Centripetal Force \hfill \qquad \\
 \( p = mv\) \\
 \( F = \frac{\Delta p}{\Delta t} \) \\
 \( p_{\mbox{tot}}= \mbox{ constant} \) \\
+\( \mbox{PE}_{\mbox{spring}}= \frac{1}{2} k x^2 \) \\
 \end{tabular}
 
 
+\subsection{Statics and Torque}
+\begin{tabular}{c}
+\( \tau = r F \sin \theta \) \\
+\( \tau = r_\perp F\) \\
+\( F_{\mbox{net}}=0 \quad \mbox{net } \tau=0\) \\
+\end{tabular}
 
-\vspace{6 in}
+
+\subsection{Rotational Motion and Angular Momentum}
+\begin{tabular}{c}
+\(\omega = \frac{\Delta \theta}{\Delta t} \quad \) 
+\(\alpha = \frac{\Delta \omega}{\Delta t} \) \\
+\( a_t=r \frac{\Delta \omega}{\Delta t} \quad \) 
+\( a_t=r \alpha\) \\
+\( x=r\theta \quad \) \( v = r \omega \) \\
+\( \theta=\omega_0 t + \frac{1}{2} \alpha t^2\) \\
+\( \omega= \omega_0 + \alpha t\) \\
+\( \omega^2 = \omega_0^2 + 2 \alpha \theta\) \\
+\( \mbox{\footnotesize{net}} \tau = I \alpha \) \\
+\( \mbox{KE}_{\mbox{rot}}=\frac{1}{2} I \omega^2\) \\
+\end{tabular}
+
+\vspace{.25in}
+
+\hrule
+
+\vspace{.25in}
+
+
+\vspace{3 in}
 
 ~
 \end{multicols}
