Added oscillatory motion and waves equations, started exam 3.

--- a/Exam1_AMC_f18_phy171.tex
+++ b/Exam1_AMC_f18_phy171.tex
@@ -143,7 +143,7 @@ ground. he mass of the mower is 50 kg. What is the acceleration?
 \begin{question}{ }
 A balttleship fires two shell at the same time towards the enemy ships. If the 
 shells follow the parabolic trajectories shown, which ship get hit first?
-\[\includegraphics[width=3.5in]{battleship.png}\]
+%\[\includegraphics[width=3.5in]{battleship.png}\]
 \begin{choices}
 \correctchoice{Ship B}%%
 \wrongchoice{Ship A}%%
