--- a/phy_171_formula_sheet.tex
+++ b/phy_171_formula_sheet.tex
@@ -308,6 +308,16 @@ Centripetal Force \hfill \qquad \\
 \(  \) \\
 \end{tabular}
 
+
+\subsection{Oscillatory Motions and Waves}
+\begin{tabular}{c}
+\( F=-kx  \) \\
+\( f=\frac{1}{T} \quad T=\frac{1}{f}  \) \\
+\( T= 2\pi \sqrt{\frac{L}{g}}  \) \\
+\( T= 2\pi \sqrt{\frac{m}{k}}  \) \\
+\( f= \frac{1}{2\pi} \sqrt{\frac{K}{m}}  \) \\
+\end{tabular}
+
 %\vspace{3 in}
 
 ~
