--- a/Exam3_AMC_f18_phy171.tex
+++ b/Exam3_AMC_f18_phy171.tex
@@ -13,7 +13,7 @@
 % This argument specifies the number of exams to be printed.
 \onecopy{1}{
 %%% beginning of the test sheet header:
-\noindent{\bf PHY 171 \hfill Exam 2}
+\noindent{\bf PHY 171 \hfill Exam 3}
 \vspace*{.5cm}
 \begin{minipage}{.4\linewidth}
 \centering\large\bf Fall 2018\end{minipage}
@@ -30,58 +30,47 @@ Name:
 %%% end of the header
 
 
-\begin{question}{Average Acceleration}
-
-  Courtney Force topped qualifying with a 3.826-second run at 150.2
-  m/s in the NHRA Arizona Nationals. What was her average
-  acceleration?
+\begin{question}{newton2}
+A rocket sled with a 5-rocket propulsion system has a mass of 2300 kg. The 
+sled's initial acceleration is 53 m/s$^2$. The force of friction opposing 
+the motion is known to be 5780 N. What is the magnitude of force exerted, 
+called thrust, by each of the five rockets?  
 \begin{choices}
-\correctchoice{39.26 m/s$^2$}%%
-\wrongchoice{39.3 m/s}%%
-\wrongchoice{28.33 m/s$^2$}%%
-\wrongchoice{36.95 m/s}%%
-\wrongchoice{32.8 m/s$^2$}%%
+\correctchoice{$2.55 \times 10^4$ N}%%
+\wrongchoice{$1.27 \times 10^5$ N}%%
+\wrongchoice{$1.22 \times 10^5$ N}%%
+\wrongchoice{$2.44 \times 10^4$ N}%%
+\wrongchoice{$2.32 \times 10^4$ N}%%
 \end{choices}
 \end{question}
 
-\begin{question}{Displacement}
-A jogger runs down a straight road with an average velocity of 
-2.5 m/s for 6.00 minutes. What is her final position if her initial 
-position was zero.
+
+
+\begin{question}{energy7}
+  What is the power output for a 54 kg woman who runs up a 4.5 m high
+  flight is stairs in 3 s, starting from rest but having a final speed
+  of 2.5 m/s
 \begin{choices}
-\correctchoice{900 m}%%
-\wrongchoice{15 m}%%
-\wrongchoice{14.5 m}%%
-\wrongchoice{860 m}%%
-\wrongchoice{975 m}%%
+\correctchoice{850 W}%%
+\wrongchoice{2550 W}%%
+\wrongchoice{963 W}%%
+\wrongchoice{623 W}%%
+\wrongchoice{1870 W}%%
 \end{choices}
+
+\begin{question}{KErot }
+  Calculate the rotational kinetic energy in a motorcycle wheel if its
+  angular velocity is 150 rad/s.  Assume $m=15$ kg, $R_1=0.30$ m and
+  $R_2=0.35$ m. Note: $I=\frac{1}{2}m(R_1^2+R_2^2)$ \\ (Draw a box around your answer)
+\AMCOpen{lines=5,dots=false}{
+\wrongchoice[w]{w}\scoring{0}%%
+\wrongchoice[s]{s}\scoring{0.5}%%
+\wrongchoice[h]{h}\scoring{1}%%
+\wrongchoice[a]{a}\scoring{1.5}%%
+\correctchoice[c]{c}\scoring{2}%%
+}
 \end{question}
 
-\begin{question}{Newton}
-Suppose the net external force exerted on a vaccum cleaner is 23 N
-parallel to floor. The mass of the vaccun cleaner is 15 kg. What is
-the acceleration?
-\begin{choices}
-\correctchoice{1.5 m/s$^2$}%%
-\wrongchoice{0.652 m/s$^2$}%%
-\wrongchoice{0.65 m/s}%%
-\wrongchoice{345 m/s$^2$}%%
-\wrongchoice{1.53 m/s}\scoring{.75}%%
-\end{choices}
-\end{question}
-
-\begin{question}{friction}
-Suppose a 130 kg wooden crate is resting on a wood floor.
-What is the maximum force you can exert horizontally on the crate 
-without moving it? For wood on wood $\mu_s=0.5$ and $\mu_k=0.3$.
-\begin{choices}
-\correctchoice{640 N}%%
-\wrongchoice{1300 N}%%
-\wrongchoice{380 N}%%
-\wrongchoice{65 N}%%
-\wrongchoice{720 N}%%
-\end{choices}
-\end{question}
 
  
 \begin{question}{centripetalacc6}
