--- a/phy_171_formula_sheet.tex
+++ b/phy_171_formula_sheet.tex
@@ -98,7 +98,7 @@
 \end{center}
 
 \subsection{Fundamental SI Units}
-\begin{tabular}{@{}ll@{}}
+\begin{tabular}{@{}ll@{}}synctex.gz
 \verb!Length!  & meter (m) \\
 \verb!Mass!    & kilogram (kg) \\
 \verb!Time! & second (s) \\
@@ -173,7 +173,7 @@ vertical motion \hfill \qquad\\
 \( v_y=v_{0y}-gt \) \\
 \( v_y^2 =v_{0y}^2 - 2g(y-y_0) \) \\
 \\
-\( s=\sqrt{x^2+y^2}\) \\
+\( s=\sqrt{x^2+y^2}\) \\synctex.gz
 \(\theta= \tan^{-1}(y/x) \) \\
 \( v= \sqrt{v_x^2+v_y^2} \) \\
 \(\theta_v= \tan^{-1}(v_y/v_x) \) \\
@@ -183,8 +183,6 @@ Maximum height and range \hfill \qquad\\
 \end{tabular}
 
 %\vspace{.25in}
-
-
 
 \subsection{Dynamics}
 \begin{tabular}{c}
@@ -200,8 +198,6 @@ Maximum height and range \hfill \qquad\\
 %\( F=k \Delta L \) \\
 %\( \Delta L =\frac{F}{k} \) \\
 \end{tabular}
-
-
 
 
 \vspace{.25in}
@@ -302,6 +298,7 @@ Centripetal Force \hfill \qquad \\
 \subsection{Heat and Heat Transfer }
 \begin{tabular}{c}
 \(  Q=mc \Delta T\) \\
+\( Q=mL_f \quad Q=mL_v \)\\
 \(  \frac{Q}{t}= \frac{kA(T_2-T_1)}{d}\) \\
 \( \frac{Q}{t}=\sigma e A T^4\)\\
 \(  \) \\
@@ -315,7 +312,7 @@ Centripetal Force \hfill \qquad \\
 \( f=\frac{1}{T} \quad T=\frac{1}{f}  \) \\
 \( T= 2\pi \sqrt{\frac{L}{g}}  \) \\
 \( T= 2\pi \sqrt{\frac{m}{k}}  \) \\
-\( f= \frac{1}{2\pi} \sqrt{\frac{K}{m}}  \) \\
+\( f= \frac{1}{2\pi} \sqrt{\frac{k}{m}}  \) \\
 \end{tabular}
 
 %\vspace{3 in}
